# fitness_app

backend/: .env  .gitignore  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 1e72c2ea6c6a_create_user_oauth_tables.py  a926409343df_create_users_table.py  ced0571063d0_create_whoop_tables.py  e9da3e55e266_add_default_now_for_created_at_and_.py
backend/src/fitness_api/: main.py
backend/src/fitness_api/api/v1/endpoints/auth/: login.py  users.py  whoop.py
backend/src/fitness_api/core/: config.py  database.py
backend/src/fitness_api/models/: user.py  whoop.py
backend/src/fitness_api/schemas/: auth.py
backend/src/fitness_api/services/auth/: service.py
backend/src/fitness_api/services/whoop/: client.py  oauth.py  sync.py
backend/tests/: run_whoop_auth.py  test_whoop_auth_endpoints.py  test_whoop_data.py  test_whoop_oauth.py  test_whoop_oauth_simple.py  test_whoop_sync.py
backend/tests/test_data/: processed_workouts.csv  recovery_20250220_201322.json  sleep_20250220_201322.json  workouts_20250220_201322.json
frontend/: App.tsx  package-lock.json  package.json
frontend/src/api/: auth.ts  index.ts
frontend/src/config/: constants.ts  theme.ts
frontend/src/context/: AuthContext.tsx
frontend/src/navigation/: AppNavigator.tsx  AuthNavigator.tsx  TabNavigator.tsx
frontend/src/screens/auth/: LoginScreen.tsx  RegisterScreen.tsx  WelcomeScreen.tsx
frontend/src/screens/dashboard/: HomeScreen.tsx  ProfileScreen.tsx
frontend/src/screens/whoop/: RecoveryScreen.tsx  SleepScreen.tsx  (+1 more)
frontend/src/types/: navigation.ts
